overflow issue

--- a/frontend/simpleswastha/src/admin/css/opdSc.css
+++ b/frontend/simpleswastha/src/admin/css/opdSc.css
@@ -5,7 +5,6 @@
 }
 .opdSc-body {
     margin: 0;
-    overflow: hidden;
     font-family: "Poppins", sans-serif;
 }
 
